--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "npm-run-all": "^4.1.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-responsive-carousel": "^3.1.30",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "react-slick": "^0.16.0",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
